project/logs/20250530_171919.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

In file included from Object3d.VS.hlsl:1:
./object3d.hlsli:3:5: error: unknown type name 'float_t4'
    float_t4 position : SV_POSITION;
    ^
./object3d.hlsli:4:5: error: unknown type name 'float_t2'
    float_t2 texcoord : TEXCOORD0;
    ^

